--- a/otherstylesheets/profile.css
+++ b/otherstylesheets/profile.css
@@ -1,379 +1,375 @@
-
-      @keyframes fadeIn {
-          0% {
-              opacity: 0;
-              transform: translateY(-1.3vw)
-          }
-
-          to {
-              opacity: 1;
-              transform: translate(0vw)
-          }
-      }
-
-      @-webkit-keyframes fadeIn {
-          0% {
-              opacity: 0;
-              -webkit-transform: translateY(-1.3vw)
-          }
-
-          to {
-              opacity: 1;
-              -webkit-transform: translate(0vw)
-          }
-      }
-
-      @-moz-keyframes fadeIn {
-          0% {
-              opacity: 0;
-              transform: translateY(-1.3vw)
-          }
-
-          to {
-              opacity: 1;
-              transform: translate(0vw)
-          }
-      }
-
-      @-ms-keyframes fadeIn {
-          0% {
-              opacity: 0;
-              transform: translateY(-1.3vw)
-          }
-
-          to {
-              opacity: 1;
-              transform: translate(0vw)
-          }
-      }
-
-      @keyframes moveUp {
-          0% {
-              transform: translateY(0vw)
-          }
-
-          to {
-              transform: translateY(-2.7vh)
-          }
-      }
-
-      @-webkit-keyframes moveUp {
-          0% {
-              -webkit-transform: translateY(0)
-          }
-
-          to {
-              -webkit-transform: translateY(-2.7vh)
-          }
-      }
-
-      @-moz-keyframes moveUp {
-          0% {
-              transform: translateY(0)
-          }
-
-          to {
-              transform: translateY(-2.7vh)
-          }
-      }
-
-      @-ms-keyframes moveUp {
-          0% {
-              transform: translateY(0)
-          }
-
-          to {
-              transform: translateY(-2.7vh)
-          }
-      }
-
-      html,body {
-          display: table;
-          margin: 0;
-          padding: 0;
-      }
-
-      body {
-          background: darkgray url(../images/profile_background.jpg);
-          background-size: cover;
-          background-repeat: no-repeat;
-          background-position: center;
-          width: 100vw;
-          height: 100vh;
-          display: table-cell;
-          vertical-align: middle;
-          text-align: center
-      }
-
-      #content-wrapper {
-        display: flex;
-        flex-direction: column;
-        min-height: 115vh;
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(-1.3vw)
     }
 
-      .Button {
-          width: auto;
-          min-width: 50px;
-          padding: 0 10px;
-          height: 4.05vh;
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          border-radius: 15px;
-          line-height: 4.05vh;
-          background-color: #add8e6;
-          display: inline-block;
-          margin-top: 1.355vh;
-          margin-bottom: 1.9575vh;
-          cursor: pointer;
-          user-select: none
-      }
-
-      #nextButton {
-          animation: none
-      }
-
-      #steps,.Button {
-          border: 1px solid gray
-      }
-
-      #steps {
-          width: 23.436vw;
-          height: auto;
-          background-color: skyblue;
-          display: none;
-          border-radius: 12px;
-          line-height: 2
-      }
-
-
-      #prompt,#promptText {
-          margin-left: auto;
-          margin-right: auto
-      }
-
-      #prompt {
-          width: 100%;
-          min-width: 16.2775vw;
-          height: 10.1625vh;
-          background-color: lightblue;
-          border: 1px solid gray;
-          border-radius: 14px;
-          margin: 0 auto;
-          margin-top: 3.915vh;
-          text-align: left
-          
-      }
-
-      #promptText {
-          padding: 5px;
-          float: left;
-          margin-top: 6.8275vh
-      }
-
-      #promptBox {
-          width: 75%;
-          height: 4.05vh;
-          background-color: lightgray;
-          border: 1px solid gray;
-          border-radius: 5px;
-          overflow: auto;
-          -ms-overflow-style: none;
-          scrollbar-width: none
-      }
-
-      #promtBox::-webkit-scrollbar {
-          display: none
-      }
-
-      #progressBar {
-          display: none;
-          width: 17.026vw
-      }
-
-      .fade-in {
-          animation: fadeIn .5s ease-in-out forwards
-      }
-
-      .move-up {
-          animation: moveUp .5s ease-in-out forwards
-      }
-
-      .animate-border {
-          border: 1px solid transparent;
-          box-shadow: 0 0 0 2px red
-      }
-
-      @media (prefers-reduced-motion:reduce) {
-          .fade-in,.move-up {
-              animation: none
-          }
-
-          .animate-border {
-              border: 0
-          }
-      }
-
-      #progressText {
-          display: none;
-          margin-top: 2.73vh
-      }
-
-      #output {
-          margin: 0 auto;
-          height: auto;
-          width: 17.026vw;
-          border: 1px solid #789;
-          background-color: #789;
-          border-radius: 8px
-      }
-
-      #output,#outputText {
-          display: none
-      }
-
-      .step-separator {
-          margin: 20px 0;
-          border: 0;
-          border-top: 1px solid #adff2f
-      }
-
-      #guide {
-          position: fixed;
-          top: 0;
-          left: 0;
-          bottom: 0;
-          width: 9.765vw;
-          background-color: #f0f0f0;
-          padding: 20px;
-          overflow-y: auto;
-          border-right: 1px solid #ccc;
-          text-align: left
-      }
-
-      #guide h2 {
-          font-size: 16px;
-          margin-top: 2.173vh
-      }
-
-      #guide ul {
-          list-style-type: none;
-          padding-left: 0;
-          margin-top: 0
-      }
-
-      #guide li {
-          margin-bottom: 1.3575vh
-      }
-
-      kbd {
-          display: inline-block;
-          min-width: 25px;
-          padding: 3px 5px;
-          font-size: 12px;
-          line-height: 1.4;
-          color: #24292e;
-          vertical-align: middle;
-          background-color: #f6f8fa;
-          border: 1px solid #d1d5da;
-          border-radius: 3px;
-          box-shadow: inset 0 -1px 0 rgba(27,31,35,.1);
-          text-align: center
-      }
-
-      #freePik {
-          position: absolute;
-          top: 0;
-          right: 0;
-          font-weight: bold;
-      }
-
-
-      @media (max-width: 600px) {
-
-        #content-wrapper {
-          flex-direction: column;
-        }
-
-        #output {
-          width: auto;
-        }
-
-        #steps, #prompt, #guide {
-            width: 100%;
-            margin: 0 auto;
-        }
-
-        body {
-          background-size: auto;
-          background-color: lightgray;
-        }
-
-        .Button {
-          min-width: 50px;
-          width: auto;
-          height: auto;
-          font-size: 12px;
-          margin: 5px auto;
-        }
-
-        #steps {
-          width: 90vw;
-          height: auto;
-        }
-
-        #prompt {
-          width: 80vw;
-          padding: 15px;
-          height: auto;
-          overflow: hidden;
-        }
-
-        #promptBox {
-          width: 90%;
-          height: 3.5vh;
-        }
-
-        #guide {
-          position: static;
-          width: 100%;
-          max-width: none;
-          padding: 10px;
-          margin-top: 20px;
-          overflow-y: visible;
-          border-right: none;
-        }
-
-        #guide h2 {
-          font-size: 14px;
-          margin-top: 10px;
-        }
-
-        #guide ul {
-          padding-left: 10px;
-        }
-
-        #guide li {
-          margin-bottom: 10px;
-        }
-
-        kbd {
-          font-size: 10px;
-        }
-
-        .fade-in, .move-up {
-          animation: none;
-        }
-
-        #promptBox {
-          width: auto;
-          height: auto;
-          margin: 10px auto;
-        }
-
-        #promptText {
-          padding: 10px;
-          margin: 5px;
-        }
-
+    to {
+        opacity: 1;
+        transform: translate(0)
     }
+}
+
+@-webkit-keyframes fadeIn {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(-1.3vw)
+    }
+
+    to {
+        opacity: 1;
+        -webkit-transform: translate(0)
+    }
+}
+
+@-moz-keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(-1.3vw)
+    }
+
+    to {
+        opacity: 1;
+        transform: translate(0)
+    }
+}
+
+@-ms-keyframes fadeIn {
+    0% {
+        opacity: 0;
+        transform: translateY(-1.3vw)
+    }
+
+    to {
+        opacity: 1;
+        transform: translate(0)
+    }
+}
+
+@keyframes moveUp {
+    0% {
+        transform: translateY(0)
+    }
+
+    to {
+        transform: translateY(-2.7vh)
+    }
+}
+
+@-webkit-keyframes moveUp {
+    0% {
+        -webkit-transform: translateY(0)
+    }
+
+    to {
+        -webkit-transform: translateY(-2.7vh)
+    }
+}
+
+@-moz-keyframes moveUp {
+    0% {
+        transform: translateY(0)
+    }
+
+    to {
+        transform: translateY(-2.7vh)
+    }
+}
+
+@-ms-keyframes moveUp {
+    0% {
+        transform: translateY(0)
+    }
+
+    to {
+        transform: translateY(-2.7vh)
+    }
+}
+
+body,html {
+    display: table;
+    margin: 0;
+    padding: 0;
+    font-family: Verdana,Geneva,Tahoma,sans-serif
+}
+
+body {
+    background: #a9a9a9 url(../images/profile_background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100vw;
+    height: 100vh;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center
+}
+
+#content-wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 120vh
+}
+
+.Button {
+    width: auto;
+    min-width: 50px;
+    padding: 0 10px;
+    height: 4.05vh;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    border-radius: 15px;
+    line-height: 4.05vh;
+    background-color: #add8e6;
+    display: inline-block;
+    margin-top: 1.355vh;
+    margin-bottom: 1.9575vh;
+    cursor: pointer;
+    user-select: none
+}
+
+#nextButton {
+    animation: none
+}
+
+#steps,.Button {
+    border: 1px solid gray
+}
+
+#steps {
+    width: 23.436vw;
+    height: auto;
+    background-color: #87ceeb;
+    display: none;
+    border-radius: 12px;
+    line-height: 2
+}
+
+#promptText {
+    margin-left: auto;
+    margin-right: auto
+}
+
+#prompt {
+    width: 100%;
+    min-width: 16.2775vw;
+    height: 10.1625vh;
+    background-color: #add8e6;
+    border: 1px solid gray;
+    border-radius: 14px;
+    margin: 0 auto;
+    margin-top: 3.915vh;
+    text-align: left
+}
+
+#promptText {
+    padding: 5px;
+    float: left;
+    margin-top: 6.8275vh
+}
+
+#promptBox {
+    width: 75%;
+    height: 4.05vh;
+    background-color: #d3d3d3;
+    border: 1px solid gray;
+    border-radius: 5px;
+    overflow: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none
+}
+
+#promtBox::-webkit-scrollbar {
+    display: none
+}
+
+#progressBar {
+    display: none;
+    width: 17.026vw
+}
+
+.fade-in {
+    animation: fadeIn .5s ease-in-out forwards
+}
+
+.move-up {
+    animation: moveUp .5s ease-in-out forwards
+}
+
+.animate-border {
+    border: 1px solid transparent;
+    box-shadow: 0 0 0 2px red
+}
+
+@media (prefers-reduced-motion:reduce) {
+    .fade-in,.move-up {
+        animation: none
+    }
+
+    .animate-border {
+        border: 0
+    }
+}
+
+#progressText {
+    display: none;
+    margin-top: 2.73vh
+}
+
+#output {
+    margin: 0 auto;
+    height: auto;
+    width: 17.026vw;
+    border: 1px solid #789;
+    background-color: #789;
+    border-radius: 8px
+}
+
+#output,#outputText {
+    display: none
+}
+
+.step-separator {
+    margin: 20px 0;
+    border: 0;
+    border-top: 1px solid #adff2f
+}
+
+#guide {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 9.765vw;
+    background-color: #f0f0f0;
+    padding: 20px;
+    overflow-y: auto;
+    border-right: 1px solid #ccc;
+    text-align: left
+}
+
+#guide h2 {
+    font-size: 16px;
+    margin-top: 2.173vh
+}
+
+#guide ul {
+    list-style-type: none;
+    padding-left: 0;
+    margin-top: 0
+}
+
+#guide li {
+    margin-bottom: 1.3575vh
+}
+
+kbd {
+    display: inline-block;
+    min-width: 25px;
+    padding: 3px 5px;
+    font-size: 12px;
+    line-height: 1.4;
+    color: #24292e;
+    vertical-align: middle;
+    background-color: #f6f8fa;
+    border: 1px solid #d1d5da;
+    border-radius: 3px;
+    box-shadow: inset 0-1px 0 rgba(27,31,35,.1);
+    text-align: center
+}
+
+#freePik {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-weight: 700
+}
+
+@media (max-width:600px) {
+    #content-wrapper {
+        flex-direction: column
+    }
+
+    #output,.Button {
+        width: auto
+    }
+
+    #prompt,#steps {
+        width: 100%;
+        margin: 0 auto
+    }
+
+    #guide {
+        margin: 0 auto
+    }
+
+    body {
+        background-size: auto;
+        background-color: #d3d3d3
+    }
+
+    .Button {
+        min-width: 50px;
+        height: auto;
+        font-size: 12px;
+        margin: 5px auto
+    }
+
+    #prompt,#steps {
+        width: 90vw;
+        height: auto
+    }
+
+    #prompt {
+        width: 80vw;
+        padding: 15px;
+        overflow: hidden
+    }
+
+    #promptBox {
+        height: 3.5vh
+    }
+
+    #guide {
+        position: static;
+        width: 100%;
+        max-width: none;
+        padding: 10px;
+        margin-top: 20px;
+        overflow-y: visible;
+        border-right: none
+    }
+
+    #guide h2 {
+        font-size: 14px;
+        margin-top: 10px
+    }
+
+    #guide ul {
+        padding-left: 10px
+    }
+
+    #guide li {
+        margin-bottom: 10px
+    }
+
+    kbd {
+        font-size: 10px
+    }
+
+    .fade-in,.move-up {
+        animation: none
+    }
+
+    #promptBox {
+        width: auto;
+        height: auto;
+        margin: 10px auto
+    }
+
+    #promptText {
+        padding: 10px;
+        margin: 5px
+    }
+}
