--- a/otherstylesheets/contentstudent3.css
+++ b/otherstylesheets/contentstudent3.css
@@ -19,7 +19,7 @@ body {
     text-align: center;
 }
 
-
+/* Syling for the headings */
 h1,h2,h3 {
     color: darkblue;
 }
@@ -48,6 +48,7 @@ footer {
     padding-top: 6.775vh;
 }
 
+/* Styling for the links */
 #internal-links-container {
     height: auto;
     margin-top: 8.13vh;
@@ -108,6 +109,7 @@ footer {
     padding: 15px;
 }
 
+/* Styling the text next to the images */
 #figcaption1, #figcaption3 {
     position: absolute;
     right: 0;
@@ -137,6 +139,7 @@ footer {
 }
 
 
+/* CSS for smaller screens (600px) */
 @media (max-width: 600px) {
     #internal-links-container,.internalLink {
         position: relative;
