--- a/splash.css
+++ b/splash.css
@@ -1,1 +1,117 @@
 
+body {
+    background-color: #c6e6e5;  
+}
+
+.page-logo {
+    display: block;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.group-members {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    text-align: center;
+    margin-top: 120px;
+}
+
+.student-1 {
+    animation: slide-in-from-top 3s ease-in-out forwards;
+}
+
+.student-2 {
+    animation: slide-in-from-bottom 3s ease-in-out forwards;
+}
+
+.student-3 {
+    animation: slide-in-from-top 3s ease-in-out forwards;
+}
+
+.student-4 {
+    animation: slide-in-from-bottom 3s ease-in-out forwards;
+}
+
+.student-1 img, .student-2 img, .student-3 img, .student-4 img {
+    display: block;
+    margin-top: 15px;
+}
+
+@keyframes slide-in-from-top {
+    0% {
+      transform: translateY(-50px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(-25px);
+      opacity: 1;
+    }
+}
+
+@keyframes slide-in-from-bottom {
+    100% {
+      transform: translateY(-25px);
+      opacity: 1;
+    }
+    0% {
+      transform: translateY(-50x);
+      opacity: 0;
+    }
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+}
+
+
+
+
+
+.student-image {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+
+
+.footer{
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+    background-color: black;
+    color: white;
+    margin-top: 200px;
+
+}
+
+.footer p{
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.footer h4{
+    margin-bottom: 10px;
+    margin-top: 5px;
+    font-weight: 600;
+    color: white;
+}
+
+.footer .fa-brands{
+    margin: 0 8px;
+    cursor: pointer;
+    padding: 18px 0;
+    color: white;
+}
+
+.footer .fa-regular{
+  margin: 0 8px;
+  cursor: pointer;
+  padding: 18px 0;
+  color: white;
+}
